app/assets/stylesheets/users/edit.scss
.row-align-center {
  display: flex;
  align-items: center
}

.header-margin {
  margin-bottom: 26px;
}

.centered-column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.column-spacing {
  margin-left: 89px
}

.two-column-height {
  max-height: 850px;
  display: flex;
  flex-flow: column wrap;
}

.save-button {
  display: flex;
  flex-direction: row;
}

.menu {
  margin-top: 12px;
}

.menu-item a {
  color: #333;
  line-height: 17px;
  font-size: 15px;

  &:focus {
    color: #74ac00;
    font-weight: 600;
    text-decoration: none;
  }
}

.vl {
  border-left: 1px solid #eee;
  height: 522px;
}

.profile-setting {
  margin-bottom: 23px;
}

h5 {
  font-weight: bold;
  line-height: 17px;
  margin-bottom: 8px;
  display: flex;
  flex-direction: row;

  .asterisk {
    color: #ca5c53;
    margin-left: 3px;
  }

  .small {
    font-size: 12px;
    margin-bottom: 7px;
  }
  
  .downward-caret {
    color: #bbbbbb;
    margin-left: 6px;
  }
}

.time {
  color: #777777;
  text-decoration: underline;
  font-size: 14px;
  margin-right: 16px;
}

.blue-button-caps {
  letter-spacing: 1.1px;
}

.gray-button {
  margin-top: 11px;
  border-color: transparent;
  background-color: transparent;
}

.gray-button-text {
  color: #d8d8d8;
  text-decoration: underline;
  font-size: 12px;
}


.italic-text {
  max-width: 257px;
  font-size: 12px;
  font-style: italic;
  line-height: 1.17;
  color: #656665;
  margin-bottom: 13px;
}

.user-photo {
  margin-right: 25px;
}

.margin-medium {
  margin-bottom: 17px;
}

.margin-medium-small {
  margin-bottom: 13px;
}

